Создание тасков для конвертации шрифтов и подключение шрифтов

--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,5 +1,5 @@
-$dark-color: ##100012;
-$light-color: ##fff0bf;
+$dark-color: #100012;
+$light-color: #fff0bf;
 $s-width: 376px;
 $m-width: 768px;
 $l-width: 1200px;
