--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -1,29 +1,39 @@
-// @font-face {
-//   font-family: "Open Sans";
-//   src: local("Open Sans"),
-//     local("OpenSans"),
-//     url("../fonts/opensans.woff2") format("woff2"),
-//     url("../fonts/opensans.woff") format("woff");
-//   font-weight: 400;
-//   font-display: swap;
-// }
-//
-// @font-face {
-//   font-family: "Open Sans";
-//   src: local("Open Sans Light"),
-//     local("OpenSans Light"),
-//     url("../fonts/opensanslight.woff2") format("woff2"),
-//     url("../fonts/opensanslight.woff") format("woff");
-//   font-weight: 300;
-//   font-display: swap;
-// }
-//
-// @font-face {
-//   font-family: "Open Sans";
-//   src: local("Open Sans Bold"),
-//     local("OpenSans Bold"),
-//     url("../fonts/opensansbold.woff2") format("woff2"),
-//     url("../fonts/opensansbold.woff") format("woff");
-//   font-weight: 700;
-//   font-display: swap;
-// }
+@font-face {
+  font-family: "Montserrat";
+  src: local("Montserrat-SemiBold"),
+    local("Montserrat SemiBold"),
+    url("../fonts/Montserrat-SemiBold.woff2") format("woff2"),
+    url("../fonts/Montserrat-SemiBold.woff") format("woff");
+  font-weight: 600;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Montserrat";
+  src: local("Montserrat-Light"),
+    local("Montserrat Light"),
+    url("../fonts/Montserrat-Light.woff2") format("woff2"),
+    url("../fonts/Montserrat-Light.woff") format("woff");
+  font-weight: 300;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Determination";
+  src: local("Determination-Regular"),
+    local("Determination Regular"),
+    url("../fonts/Determination-Regular.woff2") format("woff2"),
+    url("../fonts/Determination-Regular.woff") format("woff");
+  font-weight: 400;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Chromia";
+  src: local("Chromia-Bold"),
+    local("Chromia Bold"),
+    url("../fonts/Chromia-Bold.woff2") format("woff2"),
+    url("../fonts/Chromia-Bold.woff") format("woff");
+  font-weight: 700;
+  font-display: block;
+}
