--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -7,13 +7,13 @@ body {
   padding: 0;
   overflow-x: hidden;
 
-  font-weight: 400;
+  font-weight: 600;
   font-size: 16px;
   line-height: 1.4;
-  font-family: "Roboto", "Arial", sans-serif;
+  font-family: "Montserrat", "Arial", sans-serif;
   color: $light-color;
 
-  background-color: darken($dark-color, 5%);
+  background-color: darken($dark-color, 0%);
 }
 
 a {
