--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,4 +1,7 @@
 @import "normalize";
+@import "fonts.scss";
 @import "variables.scss";
 @import "mixins.scss";
 @import "global.scss";
+@import "blocks/container.scss";
+@import "blocks/header.scss";
