--- a/source/sass/blocks/container.scss
+++ b/source/sass/blocks/container.scss
@@ -1,6 +1,12 @@
 .container {
-  width: 100%;
-
+  width: auto;
+  margin: 0 auto;
   padding-right: 20px;
   padding-left: 20px;
+}
+
+@media (min-width: $l-width) {
+  .container {
+    width: 1200px;
+  }
 }
