Верстка блока карты

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,4 +5,5 @@
 @import "global.scss";
 @import "blocks/container.scss";
 @import "blocks/header.scss";
+@import "blocks/map.scss";
 @import "blocks/modal-agreement.scss";
