--- a/source/sass/blocks/modal-agreement.scss
+++ b/source/sass/blocks/modal-agreement.scss
@@ -8,6 +8,7 @@
   grid-template-rows: 36px auto;
   width: 100%;
   min-height: 100px;
+  box-sizing: border-box;
 
   font-family: "Determination", "Arial", sans-serif;
 
@@ -67,6 +68,9 @@
   background-image: url("../img/modal-pixel-bg@1x.png");
   background-repeat: repeat;
   box-shadow: inset 0 0 30px rgba(0,0,0,.8);
+  border-right: 10px solid #0d0f1c;
+  border-bottom: 10px solid #0d0f1c;
+  border-left: 10px solid #0d0f1c;
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
     background-image: url("../img/modal-pixel-bg@2x.png");
