Добавление разметки для меню и мелкие правки

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -3,7 +3,7 @@
   grid-template-rows: auto 250px auto;
   grid-template-columns: auto 250px auto;
   width: 100%;
-  min-height: 400px;
+  height: 100vh;
 
   background-color: #392b34;
   background-image: radial-gradient($dark-color 0%, $dark-color 5%, transparent 45%),
