--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,5 +5,6 @@
 @import "global.scss";
 @import "blocks/container.scss";
 @import "blocks/header.scss";
+@import "blocks/navigation.scss";
 @import "blocks/map.scss";
 @import "blocks/modal-agreement.scss";
