Верстка и анимация логотипа в хедере

--- a/source/sass/blocks/container.scss
+++ b/source/sass/blocks/container.scss
@@ -5,7 +5,7 @@
   padding-left: 20px;
 }
 
-@media (min-width: $l-width) {
+@media (min-width: $xl-width) {
   .container {
     width: 1200px;
   }
