--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,7 +1,9 @@
 $dark-color: #100012;
 $light-color: #fff0bf;
+$xs-width: 320px;
 $s-width: 376px;
-$m-width: 768px;
-$l-width: 1200px;
+$m-width: 500px;
+$l-width: 768px;
+$xl-width: 1200px;
 $retina-dpi: 144dpi;
 $retina-dppx: 1.5dppx;
