--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -31,3 +31,13 @@
 
   transform: translate(-50%, -50%);
 }
+
+@mixin glitch-copy { 
+	content: attr(data-text);
+	position: absolute;
+	top: 0;
+	left: 0;
+
+	width: 100%;
+	height: 100%;
+}
